@@ -6,6 +6,7 @@
    * viewing tunnels
    * viewing the addressbook
    * configuring addressbook subscriptions
+   * using a configuration wizard
 
 0.9.31 / 2017-08-19
  * Fixed various crashes in the Tunnels UI
